# mihocm

./: .pre-commit-config.yaml  CHANGELOG.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_REPORT.md  MANIFEST.in  MANUAL_PUSH_INSTRUCTIONS.md  PUSH_WITH_TOKEN.md  README.md  __init__.py  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: BEST_PRACTICES.md  CHANGELOG.md  COMPLETION_REPORT.md  FRAPPE_APP_STRUCTURE_GUIDE.md  HOOKS_PY_TEMPLATE.md  INSTALLATION.md  README.md  TROUBLESHOOTING_GUIDE.md  doctype_creation_guide.md  doctypes_documentation.md  installation_guide.md  mihocm_construction_saas_spec_roadmap.md  mihocm_construction_saas_spec_roadmap.md:Zone.Identifier  workspace_guide.md
mihocm/: __init__.py  category.py  daily_log_photo.py  daily_progress_log.py  daily_resource_log.py  hooks.py  member.py  modules.txt  patches.txt  project.py  task.py
mihocm/config/: __init__.py  desktop.py  docs.py
mihocm/doctype/: __init__.py
mihocm/doctype/category/: __init__.py  category.js  category.json  category.py
mihocm/doctype/daily_log_photo/: __init__.py  daily_log_photo.json  daily_log_photo.py
mihocm/doctype/daily_progress_log/: __init__.py  daily_progress_log.json  daily_progress_log.py
mihocm/doctype/daily_progress_log_task/: daily_progress_log_task.json  daily_progress_log_task.py
mihocm/doctype/daily_resource_log/: __init__.py  daily_resource_log.js  daily_resource_log.json  daily_resource_log.py
mihocm/doctype/daily_resource_log_issue/: daily_resource_log_issue.json
mihocm/mihocm/: __init__.py
mihocm/project/: __init__.py
(+34 files in other folders)
